--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs=-Xmx4g
 kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
+exposedVersion=0.40.1
+jdbcVersion=3.39.3.0
