--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,18 @@ replay_pid*
 .gradle
 #build
 build/*
+ranking.json
+deps.kproject.yml
+korge.keystore
+.idea/misc.xml
+.idea/codestream.xml
+.idea/sonarlint/issuestore/index.pb
+.idea/sonarlint/securityhotspotstore/index.pb
+.idea/misc.xml
+.idea/codestream.xml
+.idea/sonarlint/issuestore/index.pb
+.idea/sonarlint/securityhotspotstore/index.pb
+.idea/misc.xml
+.idea/codestream.xml
+.idea/sonarlint/issuestore/index.pb
+.idea/sonarlint/securityhotspotstore/index.pb
